--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,44 @@
 header {
   border-bottom: 1px solid white;
   width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .title {
   font-size: 3.5rem;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+
+  height: 100%;
+
+  justify-content: flex-end;
+}
+
+.navList {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+
+  margin-bottom: 1em;
+
+  & .listItem {
+    font-size: 2rem;
+    background: black;
+    padding: 0.5rem 1rem;
+    margin-bottom: 0;
+    border: 1px solid white;
+  }
+
+  & .linkItem {
+    color: white;
+    text-decoration: none;
+  }
 }
